--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "core-js": "2",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "@angular/common": "8.2.11",
+    "@angular/compiler": "8.2.11",
+    "@angular/core": "8.2.11",
+    "@angular/forms": "8.2.11",
+    "@angular/platform-browser": "8.2.11",
+    "@angular/platform-browser-dynamic": "8.2.11",
+    "@angular/router": "8.2.11",
+    "@ng-bootstrap/ng-bootstrap": "5.1.1",
+    "bootstrap": "^4.3.1",
+    "core-js": "2.6.10",
+    "font-awesome": "^4.7.0",
+    "jquery": "3.4.1",
+    "popper.js": "1.16.0",
+    "rxjs": "6.5.3",
+    "zone.js": "0.9.1"
   },
   "scripts": {
     "ng": "ng",
